--- a/index-2.html
+++ b/index-2.html
@@ -7,7 +7,7 @@
   
 
 
-  <title> Tribute to some guy</title>
+  <title> Tribute Elon Musk</title>
   
   
   
@@ -130,54 +130,58 @@ blockquote {
 
   <main id="main">
 
-  <h1 id="title"> Some guy</h1>
+  <h1 id="title"> Elon Musk</h1>
 
-  <p>  A great guy  </p>
+  <p>  Tech entrepeneur  </p>
 
   <figure id="img-div">
 
-    <img id="image" src="" alt="guy somewhere">
+    <img id="image" src=" https://upload.wikimedia.org/wikipedia/commons/3/34/Elon_Musk_Royal_Society_%28crop2%29.jpg
+    " alt="guy somewhere">
     
     <figcaption id="img-caption">
-      guy with friends somewhere doing something
+      Elon Musk entrepeneur investor and  business  magnate
     </figcaption>
   </figure>
   <section id="tribute-info">
-    <h3 id="headline"> the guy's life:</h3>
+    <h3 id="headline"> Elon Musk's bio:</h3>
     <ul>
-      <li><strong> year </strong> - Born somewhere</li>
+      <li><strong> 1971 </strong> - Born  Pretoria South Africa</li>
       <li>
-        <strong>year</strong> - does something
+        <strong>2002</strong> - Founded SpaceX
       </li>
       <li>
-        <strong>year</strong> - does something else
+        <strong> 2004 </strong> - Acquired TESLA
+      </li>
+
+      <li>
+        <strong> 2015 </strong> - Created Open AI for benefiting humanity
+      </li>
+
+      <li>
+        <strong>2016</strong> - Co-founded Neuralink
       </li>
       <li>
-        <strong>year</strong> - and something more
+        <strong>2016</strong> - Founded The Boring Company
       </li>
       <li>
-        <strong>year</strong> - meets someone
+        <strong>2021</strong> - Was awarded the  Axel Springer Award
       </li>
       <li>
-        <strong>year</strong> - they do something
+        <strong>2021</strong> - Went to Space 
       </li>
-      <li>
-        <strong>year</strong> - something happens
-      </li>
-      <li>
-        <strong>year</strong> - guy is awarded a prize
-      </li>
-      <li><strong>year</strong> - dies</li>
+      
     </ul>
-    <blockquote cite="">
+    <blockquote cite="Elon Musk">
       <p>
-        famous quote
+        When something is important enough, you do it even if the odds are not in your favor
+
       </p>
-      <cite>-- Some other guy</cite>
+      <cite>-- Elon Musk</cite>
     </blockquote>
     <h3>
       read more about guy
-      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Some_guy" target="_blank">Wikipedia entry</a>.
+      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Elon_Musk" target="_blank">Wikipedia entry</a>.
     </h3>
   </section>
 </main>
